# build123d-cad

./: README.md  SKILL.md  pyproject.toml
scripts/: cad_api.py  cad_generate.py  cad_measure.py  cad_section.py  cad_validate.py  helpers.py
src/: server.py
tests/: test_scripts.py  test_server.py
