[project]
name = "build123d-mcp"
version = "1.0.0"
description = "MCP server for parametric 3D CAD via build123d"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "build123d>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
